--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>test</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../reset.css">
+  <link rel="stylesheet" href="../strict-reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
